[package]
name = "rt_db"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tiberius = { version = "0.12", features = ["chrono"] }
duckdb = { version = "1.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["compat"] }
urlencoding = "2.1"

[[bin]]
name = "rt_db"
path = "src/main.rs"
